Fixed desktop navbar UI overlap bug

--- a/app/client/templates/navbar/navbar.less
+++ b/app/client/templates/navbar/navbar.less
@@ -93,8 +93,10 @@
 		height: auto;
 		background: white;
 		ul {
+			float: right;
+			width: 90%;
 			max-width: 1200px;
-			margin: auto;
+			margin-right: 3%;
 			.col-sm-10 {
 				margin: 9px 0;
 				text-align: right;
